--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
+.medievalsharp-regular {
+    font-family: "MedievalSharp", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }  
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'MedievalSharp', Arial, Helvetica, sans-serif;
+}
+
 .pergunta{
     display: flex;
     flex-direction: row;
@@ -33,4 +47,86 @@ img {
 
 a {
     text-decoration: none;
+}
+
+.cabecalho {
+    background-color: rgb(208, 169, 63);
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+
+nav{
+    display: flex;
+    font-size: 1.5rem;
+    gap: 50px;
+}
+
+nav a{
+    padding: 20px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 25px;
+    color: black;
+}
+
+nav a:hover{
+    color: white;
+    background-color:  rgba(148, 119, 39, 0.707);
+}
+
+section {
+    background-color: rgb(235, 222, 184);
+    padding: 2% 3%;
+}
+
+main{
+    display: flex;
+}
+
+.intro{
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
+}
+
+aside img {
+    width: 30vw;
+    min-height: 650px;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.regras{
+    list-style: none;
+}
+
+.regras li {
+    margin-top: 10px;
+}
+
+.escolha-personagem{
+    margin-bottom: 25px;
+}
+
+.personagem{
+    color: black;
+    font-size: 1.5rem;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.personagem:hover{
+    background: rgb(130,89,5);
+    background: linear-gradient(90deg, rgba(130,89,5,1) 0%, rgba(228,164,32,1) 61%, rgba(230,213,57,0) 100%);
+}
+
+footer{
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(208, 169, 63);
 }
